...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:foregroundGravity="center_vertical|center"
        android:layout_weight="1">

...
                android:text="@string/action_sign_in_short"
                android:textStyle="bold" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_register"
                android:id="@+id/register"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>
...
